@@ -93,8 +93,9 @@ misc:
 
 makefile:
 - All objective files are now placed in obj/static or obj/shared, depending on SHARED=false or SHARED=true, respectively.
-- All internal and external libraries are placed in lib/static and lib/shared.
+- All internal and external libraries are placed in lib/static and lib/shared, the include files are in lib/include.
 - External projects (including make.project) can use the makefile variable LINKCXXSCIPALL or LINKCCSCIPALL to link all SCIP libraries.
+- Running "make help" lists all makefile options.
 - All makefiles in examples/ and applications/ are updated.
 - The binaries now contain an rpath to the SCIP directory, such that shared libraries are found.
 
